// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialDelay User navigates to DialDelay 1`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#454545",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "width": 750,
      }
    }
  >
    <StatusBar
      animated={true}
      backgroundColor="#454545"
      barStyle="light-content"
      showHideTransition="slide"
    />
    <ImageBackground
      source={
        Object {
          "testUri": "../../../packages/blocks/DialDelay/assets/image_background-1.png",
        }
      }
      style={
        Object {
          "height": 1334,
          "width": 750,
        }
      }
    >
      <ImageBackground
        source={
          Object {
            "testUri": "../../../packages/blocks/DialDelay/assets/image_background-2.png",
          }
        }
        style={
          Object {
            "alignItems": "center",
            "height": 1334,
            "width": 750,
          }
        }
      >
        <SafeAreaView>
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
                "width": 750,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 15,
                  "justifyContent": "center",
                  "padding": 25,
                  "width": 15,
                }
              }
              testID="bckbtnID"
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../packages/blocks/DialDelay/assets/image_back.png",
                  }
                }
                style={
                  Object {
                    "height": 15,
                    "tintColor": "#f07233",
                    "width": 15,
                  }
                }
              />
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "justifyContent": "center",
                  "paddingHorizontal": 25,
                }
              }
              testID="btnSetID"
            >
              <Text
                style={
                  Object {
                    "color": "rgba(255,138,73,1)",
                    "fontSize": 18,
                  }
                }
              >
                SET
              </Text>
            </TouchableOpacity>
          </View>
          <Text
            style={
              Object {
                "alignSelf": "center",
                "color": "rgb(255,255,255)",
                "fontSize": 20,
                "marginTop": 98,
                "width": 730,
              }
            }
          >
            Dial Delay.
          </Text>
          <Text
            style={
              Object {
                "alignSelf": "center",
                "color": "#a1a1a1",
                "fontSize": 16,
                "marginTop": 20,
                "width": 730,
              }
            }
          >
            This setting will enable number of seconds delay need to connect with your local emergency number.
          </Text>
          <View
            style={
              Object {
                "backgroundColor": "#404040",
                "height": 196,
                "marginTop": 118,
                "width": 750,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "height": "100%",
                  "justifyContent": "space-evenly",
                  "width": 652,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#cdcdcd",
                    "marginLeft": 29,
                    "marginTop": 31,
                  }
                }
              >
                30 sec.
              </Text>
              <View
                style={
                  Object {
                    "height": "100%",
                    "justifyContent": "center",
                    "width": 589,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "rgba(255,211,154,1)",
                      "borderRadius": 98,
                      "left": 2,
                      "width": 196,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgb(0,0,0)",
                        "textAlign": "center",
                      }
                    }
                  >
                    2 minutes
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "marginTop": 5,
                      "width": 589,
                    }
                  }
                >
                  <MockedSlider
                    maximumTrackTintColor="#a1a1a1"
                    maximumValue={180}
                    minimumTrackTintColor="rgba(255,138,73,1)"
                    minimumValue={30}
                    onValueChange={[Function]}
                    step={1}
                    style={
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "width": 461,
                      }
                    }
                    thumbTintColor="rgb(255,255,255)"
                  />
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#cdcdcd",
                    "marginRight": 29,
                    "marginTop": 31,
                  }
                }
              >
                3 min.
              </Text>
            </View>
          </View>
          <Component
            hardwareAccelerated={false}
            transparent={true}
            visible={false}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 1334,
                  "justifyContent": "center",
                  "width": 750,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": 100,
                    "justifyContent": "center",
                    "width": 730,
                  }
                }
              >
                <ActivityIndicator
                  animating={true}
                  color="#f07233"
                  hidesWhenStopped={true}
                  size="large"
                />
              </View>
            </View>
          </Component>
        </SafeAreaView>
      </ImageBackground>
    </ImageBackground>
  </View>
</SafeAreaView>
`;

exports[`DialDelay User navigates to DialDelay 2`] = `
<SafeAreaView
  style={
    Object {
      "backgroundColor": "#454545",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "width": 750,
      }
    }
  >
    <StatusBar
      animated={true}
      backgroundColor="#454545"
      barStyle="light-content"
      showHideTransition="slide"
    />
    <ImageBackground
      source={
        Object {
          "testUri": "../../../packages/blocks/DialDelay/assets/image_background-1.png",
        }
      }
      style={
        Object {
          "height": 1334,
          "width": 750,
        }
      }
    >
      <ImageBackground
        source={
          Object {
            "testUri": "../../../packages/blocks/DialDelay/assets/image_background-2.png",
          }
        }
        style={
          Object {
            "alignItems": "center",
            "height": 1334,
            "width": 750,
          }
        }
      >
        <SafeAreaView>
          <View
            style={
              Object {
                "flexDirection": "row",
                "height": 60,
                "justifyContent": "space-between",
                "width": 750,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 15,
                  "justifyContent": "center",
                  "padding": 25,
                  "width": 15,
                }
              }
              testID="bckbtnID"
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../packages/blocks/DialDelay/assets/image_back.png",
                  }
                }
                style={
                  Object {
                    "height": 15,
                    "tintColor": "#f07233",
                    "width": 15,
                  }
                }
              />
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
              style={
                Object {
                  "justifyContent": "center",
                  "paddingHorizontal": 25,
                }
              }
              testID="btnSetID"
            >
              <Text
                style={
                  Object {
                    "color": "rgba(255,138,73,1)",
                    "fontSize": 18,
                  }
                }
              >
                SET
              </Text>
            </TouchableOpacity>
          </View>
          <Text
            style={
              Object {
                "alignSelf": "center",
                "color": "rgb(255,255,255)",
                "fontSize": 20,
                "marginTop": 98,
                "width": 730,
              }
            }
          >
            Dial Delay.
          </Text>
          <Text
            style={
              Object {
                "alignSelf": "center",
                "color": "#a1a1a1",
                "fontSize": 16,
                "marginTop": 20,
                "width": 730,
              }
            }
          >
            This setting will enable number of seconds delay need to connect with your local emergency number.
          </Text>
          <View
            style={
              Object {
                "backgroundColor": "#404040",
                "height": 196,
                "marginTop": 118,
                "width": 750,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "height": "100%",
                  "justifyContent": "space-evenly",
                  "width": 652,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#cdcdcd",
                    "marginLeft": 29,
                    "marginTop": 31,
                  }
                }
              >
                30 sec.
              </Text>
              <View
                style={
                  Object {
                    "height": "100%",
                    "justifyContent": "center",
                    "width": 589,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "rgba(255,211,154,1)",
                      "borderRadius": 98,
                      "left": 143,
                      "width": 196,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "rgb(0,0,0)",
                        "textAlign": "center",
                      }
                    }
                  >
                    1 minute
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "marginTop": 5,
                      "width": 589,
                    }
                  }
                >
                  <MockedSlider
                    maximumTrackTintColor="#a1a1a1"
                    maximumValue={180}
                    minimumTrackTintColor="rgba(255,138,73,1)"
                    minimumValue={30}
                    onValueChange={[Function]}
                    step={1}
                    style={
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                        "width": 461,
                      }
                    }
                    thumbTintColor="rgb(255,255,255)"
                    value={100}
                  />
                </View>
              </View>
              <Text
                style={
                  Object {
                    "color": "#cdcdcd",
                    "marginRight": 29,
                    "marginTop": 31,
                  }
                }
              >
                3 min.
              </Text>
            </View>
          </View>
          <Component
            hardwareAccelerated={false}
            transparent={true}
            visible={true}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 1334,
                  "justifyContent": "center",
                  "width": 750,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": 100,
                    "justifyContent": "center",
                    "width": 730,
                  }
                }
              >
                <ActivityIndicator
                  animating={true}
                  color="#f07233"
                  hidesWhenStopped={true}
                  size="large"
                />
              </View>
            </View>
          </Component>
        </SafeAreaView>
      </ImageBackground>
    </ImageBackground>
  </View>
</SafeAreaView>
`;
